Ajuste das configurações de deploy no arquivo de pacote do node

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "codeconnect",
+  "homepage": "https://MacoAngelo.github.io/code-connect-feed/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
